--- a/website/index.html
+++ b/website/index.html
@@ -11,27 +11,6 @@
     </head>
 
     <body>
-
-        <!--
-        <header class='container-fluid'>
-            <div class="row">
-                <div class="col-sm-1 p-1 me-3">
-                    <button type="button" class="text btn">Home</button>
-                </div>
-                <div class="col-sm-1 p-1">
-                    <a href="#" type="button" class="text btn">Product</a>
-                </div>
-                <div class="col-sm-7 pt-1">
-                </div>
-                <div class="col-sm-1 p-1">
-                    <a href="#" type="button" class="text btn">Login</a>
-                </div>
-                <div class="col-sm-1 p-1">
-                    <a href="#" type="button" class="text btn">Register</a>
-                </div>
-            </div>
-        </header>
-        -->
         <header>
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
@@ -55,12 +34,12 @@
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                     <!-- Drop down list -->
-                                    <li><a class="dropdown-item" href="#">Log in</a></li>
-                                    <li><a class="dropdown-item" href="#">Register</a></li>
+                                    <li><a class="dropdown-item text" href="#">Log in</a></li>
+                                    <li><a class="dropdown-item text" href="#">Register</a></li>
                                     <li>
                                         <hr class="dropdown-divider">
                                     </li>
-                                    <li><a class="dropdown-item" href="#">Contact us</a></li>
+                                    <li><a class="dropdown-item text" href="#">Contact us</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -76,12 +55,73 @@
 
 
 
-        <section>
-            <content>
-                <p class="text">Put content here.</p>
+        <section class="d-flex flex-row">
+            <side class="d-flex align-items-start flex-column flex-wrap p-1">
+                <ul>
+                    <li><a class="text-black text" href="#">Book</a></li>
+                    <li><a class="text-black text" href="#">Audio</a></li>
+                    <li><a class="text-black text" href="#">Devices</a></li>
+                </ul>
+            </side>
+
+
+            <content class="d-flex flex-column align-items-start flex-wrap">
+                <p class="text p-2">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut tortor pretium viverra suspendisse potenti. Mi bibendum neque egestas
+                    congue quisque egestas. Tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras
+                    fermentum. Eget felis eget nunc lobortis mattis aliquam. Nunc eget lorem dolor sed viverra ipsum
+                    nunc aliquet bibendum. Amet justo donec enim diam vulputate. Lacus luctus accumsan tortor posuere.
+                    Sit amet nisl purus in mollis nunc. Nibh ipsum consequat nisl vel pretium lectus. Non tellus orci ac
+                    auctor. Vestibulum morbi blandit cursus risus at ultrices mi tempus. Lacus sed viverra tellus in hac
+                    habitasse platea.
+                </p>
+                <p class="text p-2">
+                    Arcu dui vivamus arcu felis bibendum ut tristique et egestas. Vestibulum lorem sed risus ultricies
+                    tristique nulla. Ornare lectus sit amet est placerat in. Vulputate sapien nec sagittis aliquam
+                    malesuada bibendum arcu vitae elementum. Leo in vitae turpis massa sed elementum. Nulla facilisi
+                    nullam vehicula ipsum a. Faucibus interdum posuere lorem ipsum dolor. Tristique sollicitudin nibh
+                    sit amet commodo nulla. Quisque non tellus orci ac auctor augue mauris augue neque. Euismod in
+                    pellentesque massa placerat. Tempor orci dapibus ultrices in iaculis nunc sed augue. Odio
+                    pellentesque diam volutpat commodo sed egestas egestas. Faucibus vitae aliquet nec ullamcorper sit.
+                    Consectetur adipiscing elit ut aliquam purus sit amet luctus venenatis. Purus viverra accumsan in
+                    nisl. Facilisis magna etiam tempor orci eu. Tincidunt praesent semper feugiat nibh. Vulputate enim
+                    nulla aliquet porttitor. Adipiscing enim eu turpis egestas pretium aenean pharetra magna ac.
+                </p>
+                <p class="text p-2">
+                    Varius sit amet mattis vulputate enim nulla aliquet porttitor lacus. Tempus urna et pharetra
+                    pharetra massa massa. Phasellus vestibulum lorem sed risus ultricies tristique nulla aliquet enim.
+                    Aliquet porttitor lacus luctus accumsan tortor. Mauris pellentesque pulvinar pellentesque habitant
+                    morbi tristique senectus. Auctor eu augue ut lectus arcu bibendum at. Aliquam faucibus purus in
+                    massa. Cursus vitae congue mauris rhoncus. Habitasse platea dictumst quisque sagittis purus sit
+                    amet. Nunc id cursus metus aliquam.
+                </p>
+                <p class="text p-2">
+                    Ac placerat vestibulum lectus mauris ultrices eros in cursus turpis. Non curabitur gravida arcu ac
+                    tortor. Et leo duis ut diam quam nulla porttitor. Molestie nunc non blandit massa enim nec dui.
+                    Aliquet porttitor lacus luctus accumsan tortor. Egestas dui id ornare arcu. Duis at consectetur
+                    lorem donec massa sapien faucibus et molestie. Odio morbi quis commodo odio. Vestibulum rhoncus est
+                    pellentesque elit ullamcorper dignissim cras tincidunt. Habitant morbi tristique senectus et.
+                    Dignissim suspendisse in est ante. Feugiat scelerisque varius morbi enim nunc faucibus a
+                    pellentesque.
+                </p>
+                <p class="text p-2">
+                    Donec massa sapien faucibus et molestie ac feugiat. Phasellus faucibus scelerisque eleifend donec
+                    pretium vulputate. Sit amet venenatis urna cursus. Amet mauris commodo quis imperdiet massa
+                    tincidunt. Amet nisl purus in mollis nunc sed. Tellus cras adipiscing enim eu turpis egestas pretium
+                    aenean. Dui nunc mattis enim ut tellus. Hendrerit dolor magna eget est lorem ipsum. Senectus et
+                    netus et malesuada fames. Dictum non consectetur a erat nam at lectus urna. Donec enim diam
+                    vulputate ut pharetra sit amet aliquam id. Tincidunt augue interdum velit euismod in. Nisi
+                    scelerisque eu ultrices vitae auctor eu augue. Nisi porta lorem mollis aliquam ut porttitor leo a
+                    diam. Odio pellentesque diam volutpat commodo sed egestas egestas. Nunc sed blandit libero volutpat.
+                    Imperdiet massa tincidunt nunc pulvinar sapien et ligula. Sit amet consectetur adipiscing elit
+                    pellentesque. Egestas erat imperdiet sed euismod nisi porta.
+                </p>
             </content>
         </section>
 
-        <footer></footer>
+        <footer class="container-fluid ">
+            <p class="text">Put footer here.</p>
+        </footer>
     </body>
 </html>
